test/visibility/submodule-in-file/errors/IncludeMultipleModules.chpl
module IncludeMultipleModules {
  include module SubModule;
  proc main() {
  }
}
